--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.application.name=bff-agendador-tarefas
 
 usuario.url=localhost:8080
 agendador-tarefas.url=localhost:8081
+notificacao.url=localhost:8082
 
 server.port=8083
