--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,9 @@ spring.application.name=bff-agendador-tarefas
 usuario.url=localhost:8080
 agendador-tarefas.url=localhost:8081
 notificacao.url=localhost:8082
-
 server.port=8083
+
+cron.horario=0 0/5 * * * ?
+
+usuario.email=iarlleymangueira@gmail.com
+usuario.senha=1234
